# vgf345657yghjiu8y76t5r43wser

./: .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-quick-ref.md  .secrets.baseline  APIDOG_GUIDE.md  ARCHITECTURE.md  CI_CD_OPTIMIZATION_SUMMARY.md  CLAUDE.md  CODEBASE_STATISTICS.md  COMPLETION_SUMMARY.md  CONFIGURATION_SUMMARY.md  CONTRIBUTING.md  DATABASE_CONFIGURATION.md  DEPENDENCY_MAPPING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE_STEP_BY_STEP.md  DEVELOPER_GUIDE.md  DOCKER_QUICK_REFERENCE.md  DOCKER_SERVICES_GUIDE.md  Dockerfile  Dockerfile.celery  IMPLEMENTATION_GUIDE.md  Implementation-Plan-ADDENDUM-v3.0.md  Implementation-Plan.md  LOCAL_DEVELOPMENT_GUIDE.md  LOGGING_V2_IMPLEMENTATION.md  MAKEFILE_QUICK_REFERENCE.md  MULTI_ENVIRONMENT_ARCHITECTURE.md  Makefile  OPENROUTER_MIGRATION_GUIDE.md  OPERATIONS.md  OPERATIONS_GUIDE.md  PHASE2_GUIDE.md  PHASE3_GUIDE.md  PHASE4_GUIDE.md  PHASE5_GUIDE.md  PHASE6_GUIDE.md  PRE_COMMIT_SETUP_GUIDE.md  PRODUCTION_CONFIGURATION_GUIDE.md  (+37 more)
.github/workflows/: OPTIMIZATION_GUIDE.md  QUICK_START.md  ci-cd.yml
alembic/: env.py
alembic/versions/: 20251104_2209_initial_schema_create_all_tables.py  20251106_2122_add_role_field_to_users_table.py  20251107_0000_add_openrouter_features.py  20251107_1200_add_langfuse_fields.py  20251107_1300_add_file_storage_tables.py  20251107_1400_add_environment_promotion_support.py  20251107_1500_add_environment_to_core_models.py  create_indexes.py
docs/: DEPLOYMENT_GUIDE.md  LANGFUSE_SETUP.md  MONITORING_GUIDE.md  OPENROUTER_INTEGRATION.md  QUEUE_MANAGEMENT.md  TEST_COVERAGE_COMPLETE.md
docs/adr/: 001-initial-architecture.md  002-openrouter-llm-provider.md  003-temporal-workflow-engine.md  004-uv-package-manager.md  005-gemini-asr-integration.md  README.md  TEMPLATE.md
docs/archive/: README.md
docs/implementation/: 00-INDEX.md  01-ARCHITECTURE-OVERVIEW.md  02-DATABASE-SCHEMA.md  06-TOOLS-AHKAM.md  20-IMPLEMENTATION-ROADMAP.md  CONTENT-MAPPING.md  README.md
grafana/: README.md  prometheus-scrape-config.yml
grafana/dashboards/: application-performance.json  celery-monitoring.json
nginx/: nginx.conf
nginx/ssl/: README.md
scripts/: cleanup_environments.py  create_super_admin.py  init_db.sql  init_minio_buckets.py  init_qdrant.py  init_replication.sql  promote.py  seed_plan_limits.py  setup_openrouter.sh  start-queue-system.sh  stop-queue-system.sh  test-locally.sh  test_email.py  test_logging_v2.py  verify-before-build.sh
scripts/celery/: README.md  start_beat.sh  start_worker_all_queues.sh  start_worker_high_priority.sh  start_worker_low_priority.sh  start_worker_medium_priority.sh
src/app/: __init__.py  celeryconfig.py  main.py
src/app/api/v1/: __init__.py  admin.py  analytics.py  asr.py  auth.py  chat.py  conversations.py  documents.py  external_api.py  feedback.py  health.py  images.py  jobs.py  leaderboard.py  presets.py  storage.py  subscriptions.py  support.py  tools.py  websocket.py
src/app/core/: celery_app.py  circuit_breaker.py  config.py  constants.py  dependencies.py  health.py  langfuse_client.py  logging.py  metrics.py  security.py  startup.py  stats.py  temporal_client.py
src/app/db/: base.py  session.py
src/app/middleware/: security.py  usage_tracking.py
src/app/models/: __init__.py  admin.py  chat.py  document.py  environment.py  external_api.py  marja.py  mixins.py  storage.py  subscription.py  support_ticket.py  user.py
src/app/repositories/: __init__.py  base.py
src/app/schemas/: admin.py  auth.py  document.py  external_api.py  tools.py  user.py
src/app/services/: admin_service.py  ahkam_service.py  asr_service.py  auth.py  chonkie_service.py  dataset_service.py  datetime_service.py  document_service.py  email_service.py  embeddings_service.py  enhanced_chat_service.py  evaluation_service.py  external_api_client_service.py  google_oauth.py  hadith_service.py  image_generation_service.py  intent_detector.py  langfuse_service.py  langgraph_service.py  leaderboard_service.py  math_service.py  minio_storage_service.py  openrouter_service.py  presets_service.py  promotion_service.py  prompt_manager.py  qdrant_service.py  rate_limiter_service.py  reranker_service.py  response_cache_service.py  subscription_service.py  support_service.py  tool_orchestration_service.py  web_search_service.py
src/app/tasks/: __init__.py  asr.py  chat.py  cleanup.py  dataset.py  email.py  embeddings.py  images.py  langfuse_tasks.py  leaderboard.py  promotion.py  storage.py  web_search.py
src/app/templates/: __init__.py  email_templates.py
src/app/utils/: audio_utils.py  test_data_detector.py
src/app/workflows/: __init__.py  chat_workflow.py
tests/: conftest.py  factories.py  test_auth_service.py
tests/integration/: test_admin_endpoints.py  test_api_health.py  test_asr_endpoints.py  test_auth_endpoints.py  test_chat_api.py  test_document_endpoints.py  test_documents_api.py  test_external_api_endpoints.py  test_jobs_endpoints.py  test_leaderboard_endpoints.py  test_support_endpoints.py  test_tools_endpoints.py
tests/unit/: test_asr_service.py  test_celery_tasks.py  test_database_config.py  test_document_service.py  test_email_service.py  test_embeddings_service.py  test_enhanced_chat_service.py  test_environment_promotion.py  test_external_api_client_service.py  test_health.py  test_intent_detector.py  test_langfuse.py  test_minio_storage_service.py  test_openrouter_service.py  test_presets_service.py  test_prometheus_metrics.py  test_qdrant_service.py  test_security.py  test_subscription_service.py  test_tool_orchestration_service.py  test_web_search_config.py  test_web_search_service.py
