[tool.poetry]
name = "shia-islamic-chatbot"
version = "1.0.0"
description = "Production-grade comprehensive Shia Islamic knowledge chatbot using RAG technology"
authors = ["Shia Islamic Chatbot Team"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# Core Framework
fastapi = ">=0.115.0"
uvicorn = {extras = ["standard"], version = ">=0.30.0"}
pydantic = "^2.0"
pydantic-settings = "^2.0"

# LangChain & LangGraph
langchain = ">=0.3.0"
langgraph = ">=0.6.5"
langchain-openai = "^0.2.0"
langchain-anthropic = "^0.2.0"
langchain-google-vertexai = "^2.0.0"
langchain-google-genai = "^2.0.0"
langchain-cohere = "^0.3.0"

# AI & LLM Services
openai = "^1.0.0"
anthropic = "^0.34.0"
google-cloud-aiplatform = "^1.70.0"
google-generativeai = "^0.8.0"
cohere = "^5.0.0"

# Memory & Guardrails
mem0ai = ">=0.1.0"
nemoguardrails = ">=0.10.0"

# Chunking & Text Processing
chonkie = ">=1.4.0"

# ASR (Automatic Speech Recognition)
google-cloud-speech = "^2.28.0"
openai-whisper = {version = "^20231117", optional = true}

# Database
sqlalchemy = "^2.0"
alembic = ">=1.13.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9"

# Vector Database
qdrant-client = ">=1.11.0"

# Caching & Queue
redis = "^5.0.0"
redis-om = "^0.3.0"
celery = {extras = ["redis"], version = "^5.4.0"}
flower = "^2.0.0"
celery-progress = "^0.4.0"
kombu = "^5.4.0"

# Object Storage
minio = "^7.2.0"

# Authentication & Security
python-jose = {extras = ["cryptography"], version = "^3.3"}
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
python-multipart = "^0.0.9"
google-auth = "^2.35.0"
google-auth-oauthlib = "^1.2.0"

# Logging & Monitoring
structlog = "^24.4.0"
langfuse = "^2.50.0"

# HTTP & Web
httpx = "^0.27.0"
aiohttp = "^3.10.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.3.0"

# Environment & Configuration
python-dotenv = "^1.0.0"

# Rate Limiting
slowapi = "^0.1.9"

# Email
email-validator = "^2.2.0"

# Utils
tenacity = "^9.0.0"
python-dateutil = "^2.9.0"
pytz = "^2024.1"
jdatetime = "^5.0.0"
bcrypt = "~3.2"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=4.0.0"
factory-boy = ">=3.3.0"
faker = ">=22.0.0"
pytest-mock = "^3.14.0"
httpx = "^0.27.0"

# Code Quality
ruff = ">=0.5.0"
mypy = ">=1.11.0"
pre-commit = ">=3.7.0"

# Documentation
mkdocs-material = ">=9.5.0"

[tool.poetry.group.test.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=4.0.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
