[tool.poetry]
name = "shia-islamic-chatbot"
version = "1.0.0"
description = "Production-grade comprehensive Shia Islamic knowledge chatbot using RAG technology"
authors = ["Shia Islamic Chatbot Team"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# Core Framework
fastapi = ">=0.115.0"
uvicorn = {extras = ["standard"], version = ">=0.30.0"}
pydantic = "^2.0"
pydantic-settings = "^2.0"

# LangChain & LangGraph
langchain = ">=0.3.0"
langgraph = ">=0.6.5"
langchain-openai = "^0.2.0"
langchain-anthropic = "^0.2.0"
langchain-google-vertexai = "^2.0.0"
langchain-google-genai = "^2.0.0"
langchain-cohere = "^0.3.0"

# AI & LLM Services
openai = "^1.0.0"
anthropic = "^0.34.0"
google-cloud-aiplatform = "^1.70.0"
google-generativeai = "^0.8.0"
cohere = "^5.0.0"

# Memory & Guardrails
mem0ai = ">=0.1.0"
nemoguardrails = ">=0.10.0"

# Chunking & Text Processing
chonkie = ">=1.4.0"

# ASR (Automatic Speech Recognition)
google-cloud-speech = "^2.28.0"
openai-whisper = {version = "^20231117", optional = true}

# Database
sqlalchemy = "^2.0"
alembic = ">=1.13.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9"

# Vector Database
qdrant-client = ">=1.11.0"

# Caching & Queue
redis = "^5.0.0"
redis-om = "^0.3.0"
temporalio = "^1.5.0"  # Workflow orchestration for async task processing

# Object Storage
minio = "^7.2.0"

# Authentication & Security
python-jose = {extras = ["cryptography"], version = "^3.3"}
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
python-multipart = "^0.0.9"
google-auth = "^2.35.0"
google-auth-oauthlib = "^1.2.0"

# Logging & Monitoring
structlog = "^24.4.0"
langfuse = "^2.50.0"
prometheus-client = "^0.20.0"
prometheus-fastapi-instrumentator = "^7.0.0"

# HTTP & Web
httpx = "^0.27.0"
aiohttp = "^3.10.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.3.0"

# Environment & Configuration
python-dotenv = "^1.0.0"

# Rate Limiting
slowapi = "^0.1.9"

# Email
email-validator = "^2.2.0"
mailgun = "^0.1.0"

# Utils
tenacity = "^9.0.0"
python-dateutil = "^2.9.0"
pytz = "^2024.1"
jdatetime = "^5.0.0"
bcrypt = "~3.2"
mutagen = "^1.47.0"  # Audio metadata extraction

[tool.poetry.group.dev.dependencies]
# Testing
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=4.0.0"
factory-boy = ">=3.3.0"
faker = ">=22.0.0"
pytest-mock = "^3.14.0"
httpx = "^0.27.0"

# Code Quality & Formatting
ruff = ">=0.5.0"
mypy = ">=1.11.0"
pre-commit = ">=3.7.0"
black = ">=24.1.0"
isort = ">=5.13.0"
flake8 = ">=7.0.0"
flake8-bugbear = ">=23.12.0"
flake8-comprehensions = ">=3.14.0"
flake8-simplify = ">=0.21.0"
flake8-docstrings = ">=1.7.0"
pep8-naming = ">=0.13.0"

# Security
bandit = {extras = ["toml"], version = ">=1.7.0"}
safety = ">=3.0.0"
detect-secrets = ">=1.4.0"

# Linting Tools
pylint = ">=3.0.0"
yamllint = ">=1.33.0"
radon = ">=6.0.0"
interrogate = ">=1.5.0"

# Git Hooks
commitizen = ">=3.13.0"

# Documentation
mkdocs-material = ">=9.5.0"

[tool.poetry.group.test.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=4.0.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# ============================================================================
# Code Formatting & Quality Tools Configuration
# ============================================================================

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip_glob = ["**/migrations/*", "**/.venv/*"]
known_first_party = ["app"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503", "E501"]
max-complexity = 15
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
]
per-file-ignores = [
    "__init__.py:F401",  # Allow unused imports in __init__.py
    "tests/*:D",  # Skip docstring checks in tests
]

[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    "venv",
]
skips = [
    "B101",  # Skip assert_used (common in tests)
    "B601",  # Skip paramiko_calls (false positives)
]
tests = ["B201", "B301", "B302", "B303", "B304", "B305", "B306", "B307", "B308", "B309", "B310", "B311", "B312", "B313", "B314", "B315", "B316", "B317", "B318", "B319", "B320", "B321", "B323", "B324", "B325", "B401", "B402", "B403", "B404", "B405", "B406", "B407", "B408", "B409", "B410", "B411", "B412", "B413", "B501", "B502", "B503", "B504", "B505", "B506", "B507", "B508", "B509", "B701", "B702", "B703"]

[tool.pylint.master]
ignore = [".venv", "venv", "tests"]
jobs = 0  # Use all CPUs
load-plugins = ["pylint.extensions.docparams", "pylint.extensions.mccabe"]

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0212",  # protected-access (allow for tests)
]

[tool.pylint.design]
max-args = 10
max-attributes = 15
max-branches = 15
max-locals = 20
max-returns = 8
max-statements = 60

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 80
exclude = ["setup.py", "docs", "build", "tests"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true

[tool.radon]
exclude = "tests/*,*/__pycache__/*"
cc_min = "B"  # Minimum complexity grade (A-F)

# ============================================================================
# Commitizen Configuration
# ============================================================================

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$version"
update_changelog_on_bump = true
version_files = [
    "pyproject.toml:version"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
